# PowerHourMachineNextGen

./: .cproject  .project  README.md  sdkconfig
main/: CMakeLists.txt  hardware.c  hardware.h  main.c
main/APPLICATION/: BitmapHandler.c  BitmapHandler.h  ColorScheme.c  ColorScheme.h  Configuration.c  Configuration.h  LcdWriter.c  LcdWriter.h  MessageBox.c  PowerHourMain.c  PowerHourMain.h  Scheduler.c  Scheduler.h  SdCardHandler.c  SdCardHandler.h  SpecialTasks.c  SpecialTasks.h
main/APPLICATION/Bitmaps/: BeerShot.c  Bitmaps.c  Bitmaps.h  beer1.c  beer2.c  beer3.c  beer4.c  beer5.c  beer6.c  beer7.c  beer8.c  laudur_lapik.c
main/APPLICATION/Fonts/: Arial12.c  Arial14Bold.c  Arial16Bold.c  Arial24Bold.c  ClockFont.c  Fonts.c  Fonts.h  SmallFont.c
main/APPLICATION/Menus/: Bargraph.c  Bargraph.h  menu.c  menu.h
main/HW/: backlight.c  buttons.c  buttons.h  buzzer.c  display.c  display.h  hardware.c  hardware.h  pot.c  pot.h  random.c  random.h  spi_handler.c  spi_handler.h  systimer.c  systimer.h
main/MISC/: misc.c  misc.h  typedefs.h
